// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`astDag BlockIds 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "data": Array [
                Object {
                  "description": " Section 1",
                },
              ],
              "links": Array [
                Object {
                  "alias": undefined,
                  "type": "internal",
                  "value": "Bob Details#^2",
                },
              ],
              "type": "text",
              "value": "description:: Section 1
And some more [[Bob Details#^2]]",
            },
          ],
          "depth": 2,
          "ids": Array [
            "^1",
          ],
          "type": "block",
          "value": "## Section ^1",
        },
        Object {
          "children": Array [
            Object {
              "data": Array [
                Object {
                  "description": " Section 2",
                },
              ],
              "links": Array [
                Object {
                  "alias": " Pointer to section 3",
                  "type": "internal",
                  "value": "Bob Details#^3 ",
                },
              ],
              "type": "text",
              "value": "description:: Section 2
And some more [[Bob Details#^3 | Pointer to section 3]]",
            },
          ],
          "depth": 2,
          "ids": Array [
            "^2",
          ],
          "type": "block",
          "value": "## Section ^2",
        },
        Object {
          "children": Array [
            Object {
              "data": Array [
                Object {
                  "description": " Section 3",
                },
              ],
              "links": Array [
                Object {
                  "alias": undefined,
                  "type": "internal",
                  "value": "Unknown#^1",
                },
              ],
              "type": "text",
              "value": "description:: Section 3
And some more [[Unknown#^1]]",
            },
          ],
          "depth": 2,
          "ids": Array [
            "^3",
          ],
          "type": "block",
          "value": "## Section ^3",
        },
        Object {
          "children": Array [
            Object {
              "data": Array [
                Object {
                  "description": " Section 4",
                },
              ],
              "type": "text",
              "value": "description:: Section 4",
            },
          ],
          "depth": 2,
          "tags": Array [
            "#Section",
          ],
          "type": "block",
          "value": "## Section #Section",
        },
      ],
      "depth": 1,
      "type": "block",
      "value": "# Details about Bob",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`astDag Inline fields 1`] = `
Object {
  "children": Array [
    Object {
      "data": Array [
        Object {
          "inline ": " field",
        },
      ],
      "type": "text",
      "value": "inline :: field",
    },
    Object {
      "data": Array [
        Object {
          " inline ": " field ",
        },
      ],
      "type": "text",
      "value": "nested ( inline :: field )",
    },
    Object {
      "data": Array [
        Object {
          "**Thoughts**": " It was decent.",
        },
      ],
      "type": "text",
      "value": "**Thoughts**:: It was decent.",
    },
    Object {
      "data": Array [
        Object {
          "**Rating**": " 6'",
        },
      ],
      "type": "text",
      "value": "**Rating**:: 6'",
    },
    Object {
      "data": Array [
        Object {
          "subject ": Object {
            " inline ": " field",
          },
        },
      ],
      "type": "text",
      "value": "subject :: inline :: field",
    },
    Object {
      "data": Array [
        Object {
          " subject ": Object {
            " inline ": " field ",
          },
        },
      ],
      "type": "text",
      "value": "nested ( subject :: inline :: field )",
    },
    Object {
      "data": Array [
        Object {
          "subject ": Object {
            " **Thoughts**": " It was decent.",
          },
        },
      ],
      "type": "text",
      "value": "subject :: **Thoughts**:: It was decent.",
    },
    Object {
      "data": Array [
        Object {
          "subject ": Object {
            " **Rating**": " 6",
          },
        },
      ],
      "type": "text",
      "value": "subject :: **Rating**:: 6",
    },
    Object {
      "type": "text",
      "value": "No inline fields",
    },
    Object {
      "data": Array [
        Object {
          "Too ": Object {
            " many ": Object {
              " inline ": " fields",
            },
          },
        },
      ],
      "type": "text",
      "value": "Too :: many :: inline :: fields",
    },
    Object {
      "data": Array [
        Object {
          "[[Bob]] ": Object {
            " foaf:knows ": " [[Alice]]",
          },
        },
      ],
      "links": Array [
        Object {
          "alias": undefined,
          "type": "internal",
          "value": "Bob",
        },
        Object {
          "alias": undefined,
          "type": "internal",
          "value": "Alice",
        },
      ],
      "type": "text",
      "value": "[[Bob]] :: foaf:knows :: [[Alice]]",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`astDag Links 1`] = `
Object {
  "children": Array [
    Object {
      "data": Array [
        Object {
          "has image ": " ![Lovely image](../houses/img.png)",
        },
      ],
      "links": Array [
        Object {
          "alias": "Lovely image",
          "type": "internal",
          "value": "../houses/img.png",
        },
      ],
      "type": "text",
      "value": "has image :: ![Lovely image](../houses/img.png)",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "type": "internal",
          "value": "link 1",
        },
      ],
      "type": "text",
      "value": "[[link 1]]",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "type": "internal",
          "value": "/full/path/link 1",
        },
      ],
      "type": "text",
      "value": "[[/full/path/link 1]]",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "type": "internal",
          "value": "/full/path/link 1.md",
        },
      ],
      "type": "text",
      "value": "[[/full/path/link 1.md]]",
    },
    Object {
      "links": Array [
        Object {
          "alias": "Alias 2",
          "type": "external",
          "value": "http://example.com",
        },
      ],
      "type": "text",
      "value": "[Alias 2](http://example.com)",
    },
    Object {
      "links": Array [
        Object {
          "alias": "Alias 1",
          "type": "internal",
          "value": "link 1 ",
        },
      ],
      "type": "text",
      "value": "[[link 1 |Alias 1]]",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "transclude": true,
          "type": "internal",
          "value": "link 1",
        },
      ],
      "type": "text",
      "value": "![[link 1]]",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "transclude": true,
          "type": "internal",
          "value": "image.png",
        },
      ],
      "type": "text",
      "value": "![[image.png]]",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "type": "external",
          "value": "http://example.com",
        },
      ],
      "type": "text",
      "value": "The website is http://example.com see you!",
    },
    Object {
      "links": Array [
        Object {
          "alias": "here",
          "type": "external",
          "value": "http://example.com",
        },
      ],
      "type": "text",
      "value": "The website is [here](http://example.com) see you!",
    },
    Object {
      "links": Array [
        Object {
          "alias": "here",
          "type": "internal",
          "value": "protocol",
        },
      ],
      "type": "text",
      "value": "The website is [here](protocol) see you!",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "type": "external",
          "value": "http://example.com",
        },
        Object {
          "alias": undefined,
          "type": "external",
          "value": "https://example2.com",
        },
      ],
      "type": "text",
      "value": "<http://example.com> <https://example2.com> ",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`astDag Outline 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "outline",
          "value": "Task",
        },
        Object {
          "checked": true,
          "type": "outline",
          "value": "Task",
        },
        Object {
          "type": "outline",
          "value": "Item 0",
        },
        Object {
          "children": Array [
            Object {
              "type": "outline",
              "value": "Item 1",
            },
            Object {
              "type": "outline",
              "value": "Item 2",
            },
            Object {
              "children": Array [
                Object {
                  "type": "outline",
                  "value": "Item 3",
                },
              ],
              "ordered": false,
              "type": "outline",
            },
          ],
          "ordered": false,
          "type": "outline",
        },
        Object {
          "type": "outline",
          "value": "Item 4",
        },
      ],
      "ordered": false,
      "type": "outline",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`astDag People 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "data": Array [
                Object {
                  "number ": " 42",
                },
              ],
              "type": "text",
              "value": "number :: 42",
            },
          ],
          "depth": 2,
          "type": "block",
          "value": "## A heading outside",
        },
      ],
      "depth": 1,
      "type": "block",
      "value": "# Alice",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "outline",
                  "value": "Eating",
                },
                Object {
                  "type": "outline",
                  "value": "Dancing",
                },
              ],
              "ordered": false,
              "type": "outline",
            },
          ],
          "depth": 2,
          "type": "block",
          "value": "## Interests",
        },
      ],
      "data": Array [
        Object {
          "age ": " 42",
        },
      ],
      "depth": 1,
      "type": "block",
      "value": "# Bob (age :: 42)",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "outline",
                  "value": "Waking up",
                },
                Object {
                  "type": "outline",
                  "value": "Drinking tea",
                },
              ],
              "ordered": true,
              "type": "outline",
            },
          ],
          "depth": 2,
          "type": "block",
          "value": "## Todo list",
        },
        Object {
          "children": Array [
            Object {
              "data": Array [
                Object {
                  "age ": " 56",
                },
              ],
              "type": "text",
              "value": "Charlie is a good guy. (age :: 56)",
            },
          ],
          "depth": 2,
          "type": "block",
          "value": "## Description",
        },
      ],
      "depth": 1,
      "type": "block",
      "value": "# Charlie",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`astDag Yaml 1`] = `
Object {
  "data": Array [
    Object {
      "date updated": "2021-08-05T17:10:34+02:00",
      "one": Array [
        "Two",
        Object {
          "Three": Array [
            "Other",
          ],
        },
      ],
      "without-value": null,
    },
  ],
  "depth": 0,
  "tags": Array [
    "cats",
    "dogs",
  ],
  "type": "root",
}
`;

exports[`astDag Yaml-wikilink 1`] = `
Object {
  "data": Array [
    Object {
      "agent": "[[osg-knowledge-agent]]",
      "stakeholders": Array [
        "[[cvasquez]]",
        "[[osg-hypermedia-agent]]",
      ],
      "uuid": "184b475b-89f4-4fe3-a7e8-c8fb1ba58ec7",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`astDag code fence 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "lang": "js",
          "type": "code",
          "value": "\`\`\`js
Hello world
\`\`\`",
        },
      ],
      "depth": 1,
      "type": "block",
      "value": "# Some code ",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`astDag includePosition:true BlockIds 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "data": Array [
                Object {
                  "description": " Section 1",
                },
              ],
              "links": Array [
                Object {
                  "alias": undefined,
                  "type": "internal",
                  "value": "Bob Details#^2",
                },
              ],
              "type": "text",
              "value": "description:: Section 1
And some more [[Bob Details#^2]]",
            },
          ],
          "depth": 2,
          "ids": Array [
            "^1",
          ],
          "position": Object {
            "end": Object {
              "column": 14,
              "line": 4,
              "offset": 35,
            },
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 22,
            },
          },
          "type": "block",
          "value": "## Section ^1",
        },
        Object {
          "children": Array [
            Object {
              "data": Array [
                Object {
                  "description": " Section 2",
                },
              ],
              "links": Array [
                Object {
                  "alias": " Pointer to section 3",
                  "type": "internal",
                  "value": "Bob Details#^3 ",
                },
              ],
              "type": "text",
              "value": "description:: Section 2
And some more [[Bob Details#^3 | Pointer to section 3]]",
            },
          ],
          "depth": 2,
          "ids": Array [
            "^2",
          ],
          "position": Object {
            "end": Object {
              "column": 14,
              "line": 9,
              "offset": 108,
            },
            "start": Object {
              "column": 1,
              "line": 9,
              "offset": 95,
            },
          },
          "type": "block",
          "value": "## Section ^2",
        },
        Object {
          "children": Array [
            Object {
              "data": Array [
                Object {
                  "description": " Section 3",
                },
              ],
              "links": Array [
                Object {
                  "alias": undefined,
                  "type": "internal",
                  "value": "Unknown#^1",
                },
              ],
              "type": "text",
              "value": "description:: Section 3
And some more [[Unknown#^1]]",
            },
          ],
          "depth": 2,
          "ids": Array [
            "^3",
          ],
          "position": Object {
            "end": Object {
              "column": 14,
              "line": 14,
              "offset": 204,
            },
            "start": Object {
              "column": 1,
              "line": 14,
              "offset": 191,
            },
          },
          "type": "block",
          "value": "## Section ^3",
        },
        Object {
          "children": Array [
            Object {
              "data": Array [
                Object {
                  "description": " Section 4",
                },
              ],
              "type": "text",
              "value": "description:: Section 4",
            },
          ],
          "depth": 2,
          "position": Object {
            "end": Object {
              "column": 20,
              "line": 19,
              "offset": 279,
            },
            "start": Object {
              "column": 1,
              "line": 19,
              "offset": 260,
            },
          },
          "tags": Array [
            "#Section",
          ],
          "type": "block",
          "value": "## Section #Section",
        },
      ],
      "depth": 1,
      "position": Object {
        "end": Object {
          "column": 20,
          "line": 2,
          "offset": 20,
        },
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "block",
      "value": "# Details about Bob",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`astDag includePosition:true Inline fields 1`] = `
Object {
  "children": Array [
    Object {
      "data": Array [
        Object {
          "inline ": " field",
        },
      ],
      "type": "text",
      "value": "inline :: field",
    },
    Object {
      "data": Array [
        Object {
          " inline ": " field ",
        },
      ],
      "type": "text",
      "value": "nested ( inline :: field )",
    },
    Object {
      "data": Array [
        Object {
          "**Thoughts**": " It was decent.",
        },
      ],
      "type": "text",
      "value": "**Thoughts**:: It was decent.",
    },
    Object {
      "data": Array [
        Object {
          "**Rating**": " 6'",
        },
      ],
      "type": "text",
      "value": "**Rating**:: 6'",
    },
    Object {
      "data": Array [
        Object {
          "subject ": Object {
            " inline ": " field",
          },
        },
      ],
      "type": "text",
      "value": "subject :: inline :: field",
    },
    Object {
      "data": Array [
        Object {
          " subject ": Object {
            " inline ": " field ",
          },
        },
      ],
      "type": "text",
      "value": "nested ( subject :: inline :: field )",
    },
    Object {
      "data": Array [
        Object {
          "subject ": Object {
            " **Thoughts**": " It was decent.",
          },
        },
      ],
      "type": "text",
      "value": "subject :: **Thoughts**:: It was decent.",
    },
    Object {
      "data": Array [
        Object {
          "subject ": Object {
            " **Rating**": " 6",
          },
        },
      ],
      "type": "text",
      "value": "subject :: **Rating**:: 6",
    },
    Object {
      "type": "text",
      "value": "No inline fields",
    },
    Object {
      "data": Array [
        Object {
          "Too ": Object {
            " many ": Object {
              " inline ": " fields",
            },
          },
        },
      ],
      "type": "text",
      "value": "Too :: many :: inline :: fields",
    },
    Object {
      "data": Array [
        Object {
          "[[Bob]] ": Object {
            " foaf:knows ": " [[Alice]]",
          },
        },
      ],
      "links": Array [
        Object {
          "alias": undefined,
          "type": "internal",
          "value": "Bob",
        },
        Object {
          "alias": undefined,
          "type": "internal",
          "value": "Alice",
        },
      ],
      "type": "text",
      "value": "[[Bob]] :: foaf:knows :: [[Alice]]",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`astDag includePosition:true Links 1`] = `
Object {
  "children": Array [
    Object {
      "data": Array [
        Object {
          "has image ": " ![Lovely image](../houses/img.png)",
        },
      ],
      "links": Array [
        Object {
          "alias": "Lovely image",
          "type": "internal",
          "value": "../houses/img.png",
        },
      ],
      "type": "text",
      "value": "has image :: ![Lovely image](../houses/img.png)",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "type": "internal",
          "value": "link 1",
        },
      ],
      "type": "text",
      "value": "[[link 1]]",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "type": "internal",
          "value": "/full/path/link 1",
        },
      ],
      "type": "text",
      "value": "[[/full/path/link 1]]",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "type": "internal",
          "value": "/full/path/link 1.md",
        },
      ],
      "type": "text",
      "value": "[[/full/path/link 1.md]]",
    },
    Object {
      "links": Array [
        Object {
          "alias": "Alias 2",
          "type": "external",
          "value": "http://example.com",
        },
      ],
      "type": "text",
      "value": "[Alias 2](http://example.com)",
    },
    Object {
      "links": Array [
        Object {
          "alias": "Alias 1",
          "type": "internal",
          "value": "link 1 ",
        },
      ],
      "type": "text",
      "value": "[[link 1 |Alias 1]]",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "transclude": true,
          "type": "internal",
          "value": "link 1",
        },
      ],
      "type": "text",
      "value": "![[link 1]]",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "transclude": true,
          "type": "internal",
          "value": "image.png",
        },
      ],
      "type": "text",
      "value": "![[image.png]]",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "type": "external",
          "value": "http://example.com",
        },
      ],
      "type": "text",
      "value": "The website is http://example.com see you!",
    },
    Object {
      "links": Array [
        Object {
          "alias": "here",
          "type": "external",
          "value": "http://example.com",
        },
      ],
      "type": "text",
      "value": "The website is [here](http://example.com) see you!",
    },
    Object {
      "links": Array [
        Object {
          "alias": "here",
          "type": "internal",
          "value": "protocol",
        },
      ],
      "type": "text",
      "value": "The website is [here](protocol) see you!",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "type": "external",
          "value": "http://example.com",
        },
        Object {
          "alias": undefined,
          "type": "external",
          "value": "https://example2.com",
        },
      ],
      "type": "text",
      "value": "<http://example.com> <https://example2.com> ",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`astDag includePosition:true Outline 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "outline",
          "value": "Task",
        },
        Object {
          "checked": true,
          "type": "outline",
          "value": "Task",
        },
        Object {
          "type": "outline",
          "value": "Item 0",
        },
        Object {
          "children": Array [
            Object {
              "type": "outline",
              "value": "Item 1",
            },
            Object {
              "type": "outline",
              "value": "Item 2",
            },
            Object {
              "children": Array [
                Object {
                  "type": "outline",
                  "value": "Item 3",
                },
              ],
              "ordered": false,
              "position": Object {
                "end": Object {
                  "column": 11,
                  "line": 7,
                  "offset": 62,
                },
                "start": Object {
                  "column": 3,
                  "line": 7,
                  "offset": 54,
                },
              },
              "type": "outline",
            },
          ],
          "ordered": false,
          "position": Object {
            "end": Object {
              "column": 11,
              "line": 7,
              "offset": 62,
            },
            "start": Object {
              "column": 2,
              "line": 5,
              "offset": 33,
            },
          },
          "type": "outline",
        },
        Object {
          "type": "outline",
          "value": "Item 4",
        },
      ],
      "ordered": false,
      "position": Object {
        "end": Object {
          "column": 9,
          "line": 8,
          "offset": 71,
        },
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "outline",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`astDag includePosition:true People 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "data": Array [
                Object {
                  "number ": " 42",
                },
              ],
              "type": "text",
              "value": "number :: 42",
            },
          ],
          "depth": 2,
          "position": Object {
            "end": Object {
              "column": 21,
              "line": 3,
              "offset": 29,
            },
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 9,
            },
          },
          "type": "block",
          "value": "## A heading outside",
        },
      ],
      "depth": 1,
      "position": Object {
        "end": Object {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "block",
      "value": "# Alice",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "outline",
                  "value": "Eating",
                },
                Object {
                  "type": "outline",
                  "value": "Dancing",
                },
              ],
              "ordered": false,
              "position": Object {
                "end": Object {
                  "column": 10,
                  "line": 12,
                  "offset": 96,
                },
                "start": Object {
                  "column": 1,
                  "line": 11,
                  "offset": 78,
                },
              },
              "type": "outline",
            },
          ],
          "depth": 2,
          "position": Object {
            "end": Object {
              "column": 13,
              "line": 9,
              "offset": 76,
            },
            "start": Object {
              "column": 1,
              "line": 9,
              "offset": 64,
            },
          },
          "type": "block",
          "value": "## Interests",
        },
      ],
      "data": Array [
        Object {
          "age ": " 42",
        },
      ],
      "depth": 1,
      "position": Object {
        "end": Object {
          "column": 18,
          "line": 7,
          "offset": 62,
        },
        "start": Object {
          "column": 1,
          "line": 7,
          "offset": 45,
        },
      },
      "type": "block",
      "value": "# Bob (age :: 42)",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "outline",
                  "value": "Waking up",
                },
                Object {
                  "type": "outline",
                  "value": "Drinking tea",
                },
              ],
              "ordered": true,
              "position": Object {
                "end": Object {
                  "column": 16,
                  "line": 19,
                  "offset": 151,
                },
                "start": Object {
                  "column": 1,
                  "line": 18,
                  "offset": 123,
                },
              },
              "type": "outline",
            },
          ],
          "depth": 2,
          "position": Object {
            "end": Object {
              "column": 13,
              "line": 16,
              "offset": 121,
            },
            "start": Object {
              "column": 1,
              "line": 16,
              "offset": 109,
            },
          },
          "type": "block",
          "value": "## Todo list",
        },
        Object {
          "children": Array [
            Object {
              "data": Array [
                Object {
                  "age ": " 56",
                },
              ],
              "type": "text",
              "value": "Charlie is a good guy. (age :: 56)",
            },
          ],
          "depth": 2,
          "position": Object {
            "end": Object {
              "column": 15,
              "line": 21,
              "offset": 167,
            },
            "start": Object {
              "column": 1,
              "line": 21,
              "offset": 153,
            },
          },
          "type": "block",
          "value": "## Description",
        },
      ],
      "depth": 1,
      "position": Object {
        "end": Object {
          "column": 10,
          "line": 14,
          "offset": 107,
        },
        "start": Object {
          "column": 1,
          "line": 14,
          "offset": 98,
        },
      },
      "type": "block",
      "value": "# Charlie",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`astDag includePosition:true Yaml 1`] = `
Object {
  "data": Array [
    Object {
      "date updated": "2021-08-05T17:10:34+02:00",
      "one": Array [
        "Two",
        Object {
          "Three": Array [
            "Other",
          ],
        },
      ],
      "without-value": null,
    },
  ],
  "depth": 0,
  "tags": Array [
    "cats",
    "dogs",
  ],
  "type": "root",
}
`;

exports[`astDag includePosition:true Yaml-wikilink 1`] = `
Object {
  "data": Array [
    Object {
      "agent": "[[osg-knowledge-agent]]",
      "stakeholders": Array [
        "[[cvasquez]]",
        "[[osg-hypermedia-agent]]",
      ],
      "uuid": "184b475b-89f4-4fe3-a7e8-c8fb1ba58ec7",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`astDag includePosition:true code fence 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "lang": "js",
          "type": "code",
          "value": "\`\`\`js
Hello world
\`\`\`",
        },
      ],
      "depth": 1,
      "position": Object {
        "end": Object {
          "column": 13,
          "line": 3,
          "offset": 14,
        },
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 2,
        },
      },
      "type": "block",
      "value": "# Some code ",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`astDag normalize:true BlockIds 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "data": Array [
                Object {
                  "description": "Section 1",
                },
              ],
              "links": Array [
                Object {
                  "alias": undefined,
                  "type": "internal",
                  "value": "Bob Details#^2",
                },
              ],
              "type": "text",
              "value": "And some more [[Bob Details#^2]]",
            },
          ],
          "depth": 2,
          "ids": Array [
            "1",
          ],
          "type": "block",
          "value": "Section",
        },
        Object {
          "children": Array [
            Object {
              "data": Array [
                Object {
                  "description": "Section 2",
                },
              ],
              "links": Array [
                Object {
                  "alias": " Pointer to section 3",
                  "type": "internal",
                  "value": "Bob Details#^3 ",
                },
              ],
              "type": "text",
              "value": "And some more [[Bob Details#^3 | Pointer to section 3]]",
            },
          ],
          "depth": 2,
          "ids": Array [
            "2",
          ],
          "type": "block",
          "value": "Section",
        },
        Object {
          "children": Array [
            Object {
              "data": Array [
                Object {
                  "description": "Section 3",
                },
              ],
              "links": Array [
                Object {
                  "alias": undefined,
                  "type": "internal",
                  "value": "Unknown#^1",
                },
              ],
              "type": "text",
              "value": "And some more [[Unknown#^1]]",
            },
          ],
          "depth": 2,
          "ids": Array [
            "3",
          ],
          "type": "block",
          "value": "Section",
        },
        Object {
          "children": Array [
            Object {
              "data": Array [
                Object {
                  "description": "Section 4",
                },
              ],
              "type": "text",
              "value": "",
            },
          ],
          "depth": 2,
          "tags": Array [
            "Section",
          ],
          "type": "block",
          "value": "Section",
        },
      ],
      "depth": 1,
      "type": "block",
      "value": "Details about Bob",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`astDag normalize:true Inline fields 1`] = `
Object {
  "children": Array [
    Object {
      "data": Array [
        Object {
          "inline": "field",
        },
      ],
      "type": "text",
      "value": "",
    },
    Object {
      "data": Array [
        Object {
          "inline": "field",
        },
      ],
      "type": "text",
      "value": "nested",
    },
    Object {
      "data": Array [
        Object {
          "**Thoughts**": "It was decent.",
        },
      ],
      "type": "text",
      "value": "",
    },
    Object {
      "data": Array [
        Object {
          "**Rating**": "6'",
        },
      ],
      "type": "text",
      "value": "",
    },
    Object {
      "data": Array [
        Object {
          "subject": Object {
            "inline": "field",
          },
        },
      ],
      "type": "text",
      "value": "",
    },
    Object {
      "data": Array [
        Object {
          "subject": Object {
            "inline": "field",
          },
        },
      ],
      "type": "text",
      "value": "nested",
    },
    Object {
      "data": Array [
        Object {
          "subject": Object {
            "**Thoughts**": "It was decent.",
          },
        },
      ],
      "type": "text",
      "value": "",
    },
    Object {
      "data": Array [
        Object {
          "subject": Object {
            "**Rating**": "6",
          },
        },
      ],
      "type": "text",
      "value": "",
    },
    Object {
      "type": "text",
      "value": "No inline fields",
    },
    Object {
      "data": Array [
        Object {
          "Too": Object {
            "many": Object {
              "inline": "fields",
            },
          },
        },
      ],
      "type": "text",
      "value": "",
    },
    Object {
      "data": Array [
        Object {
          "[[Bob]]": Object {
            "foaf:knows": "[[Alice]]",
          },
        },
      ],
      "links": Array [
        Object {
          "alias": undefined,
          "type": "internal",
          "value": "Bob",
        },
        Object {
          "alias": undefined,
          "type": "internal",
          "value": "Alice",
        },
      ],
      "type": "text",
      "value": "",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`astDag normalize:true Links 1`] = `
Object {
  "children": Array [
    Object {
      "data": Array [
        Object {
          "has image": "![Lovely image](../houses/img.png)",
        },
      ],
      "links": Array [
        Object {
          "alias": "Lovely image",
          "type": "internal",
          "value": "../houses/img.png",
        },
      ],
      "type": "text",
      "value": "",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "type": "internal",
          "value": "link 1",
        },
      ],
      "type": "text",
      "value": "[[link 1]]",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "type": "internal",
          "value": "/full/path/link 1",
        },
      ],
      "type": "text",
      "value": "[[/full/path/link 1]]",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "type": "internal",
          "value": "/full/path/link 1.md",
        },
      ],
      "type": "text",
      "value": "[[/full/path/link 1.md]]",
    },
    Object {
      "links": Array [
        Object {
          "alias": "Alias 2",
          "type": "external",
          "value": "http://example.com",
        },
      ],
      "type": "text",
      "value": "[Alias 2](http://example.com)",
    },
    Object {
      "links": Array [
        Object {
          "alias": "Alias 1",
          "type": "internal",
          "value": "link 1 ",
        },
      ],
      "type": "text",
      "value": "[[link 1 |Alias 1]]",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "transclude": true,
          "type": "internal",
          "value": "link 1",
        },
      ],
      "type": "text",
      "value": "![[link 1]]",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "transclude": true,
          "type": "internal",
          "value": "image.png",
        },
      ],
      "type": "text",
      "value": "![[image.png]]",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "type": "external",
          "value": "http://example.com",
        },
      ],
      "type": "text",
      "value": "The website is http://example.com see you!",
    },
    Object {
      "links": Array [
        Object {
          "alias": "here",
          "type": "external",
          "value": "http://example.com",
        },
      ],
      "type": "text",
      "value": "The website is [here](http://example.com) see you!",
    },
    Object {
      "links": Array [
        Object {
          "alias": "here",
          "type": "internal",
          "value": "protocol",
        },
      ],
      "type": "text",
      "value": "The website is [here](protocol) see you!",
    },
    Object {
      "links": Array [
        Object {
          "alias": undefined,
          "type": "external",
          "value": "http://example.com",
        },
        Object {
          "alias": undefined,
          "type": "external",
          "value": "https://example2.com",
        },
      ],
      "type": "text",
      "value": "<http://example.com> <https://example2.com>",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`astDag normalize:true Outline 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "outline",
          "value": "Task",
        },
        Object {
          "checked": true,
          "type": "outline",
          "value": "Task",
        },
        Object {
          "type": "outline",
          "value": "Item 0",
        },
        Object {
          "children": Array [
            Object {
              "type": "outline",
              "value": "Item 1",
            },
            Object {
              "type": "outline",
              "value": "Item 2",
            },
            Object {
              "children": Array [
                Object {
                  "type": "outline",
                  "value": "Item 3",
                },
              ],
              "ordered": false,
              "type": "outline",
            },
          ],
          "ordered": false,
          "type": "outline",
        },
        Object {
          "type": "outline",
          "value": "Item 4",
        },
      ],
      "ordered": false,
      "type": "outline",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`astDag normalize:true People 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "data": Array [
                Object {
                  "number": "42",
                },
              ],
              "type": "text",
              "value": "",
            },
          ],
          "depth": 2,
          "type": "block",
          "value": "A heading outside",
        },
      ],
      "depth": 1,
      "type": "block",
      "value": "Alice",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "outline",
                  "value": "Eating",
                },
                Object {
                  "type": "outline",
                  "value": "Dancing",
                },
              ],
              "ordered": false,
              "type": "outline",
            },
          ],
          "depth": 2,
          "type": "block",
          "value": "Interests",
        },
      ],
      "data": Array [
        Object {
          "age": "42",
        },
      ],
      "depth": 1,
      "type": "block",
      "value": "Bob",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "outline",
                  "value": "Waking up",
                },
                Object {
                  "type": "outline",
                  "value": "Drinking tea",
                },
              ],
              "ordered": true,
              "type": "outline",
            },
          ],
          "depth": 2,
          "type": "block",
          "value": "Todo list",
        },
        Object {
          "children": Array [
            Object {
              "data": Array [
                Object {
                  "age": "56",
                },
              ],
              "type": "text",
              "value": "Charlie is a good guy.",
            },
          ],
          "depth": 2,
          "type": "block",
          "value": "Description",
        },
      ],
      "depth": 1,
      "type": "block",
      "value": "Charlie",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`astDag normalize:true Yaml 1`] = `
Object {
  "data": Array [
    Object {
      "date updated": "2021-08-05T17:10:34+02:00",
      "one": Array [
        "Two",
        Object {
          "Three": Array [
            "Other",
          ],
        },
      ],
    },
  ],
  "depth": 0,
  "tags": Array [
    "cats",
    "dogs",
  ],
  "type": "root",
}
`;

exports[`astDag normalize:true Yaml-wikilink 1`] = `
Object {
  "data": Array [
    Object {
      "agent": "[[osg-knowledge-agent]]",
      "stakeholders": Array [
        "[[cvasquez]]",
        "[[osg-hypermedia-agent]]",
      ],
      "uuid": "184b475b-89f4-4fe3-a7e8-c8fb1ba58ec7",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`astDag normalize:true code fence 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "lang": "js",
          "type": "code",
          "value": "\`\`\`js
Hello world
\`\`\`",
        },
      ],
      "depth": 1,
      "type": "block",
      "value": "Some code",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`inLineAsArray inLineAsArray:false 1`] = `
Object {
  "children": Array [
    Object {
      "data": Array [
        Object {
          "inline ": " field",
        },
      ],
      "type": "text",
      "value": "inline :: field",
    },
    Object {
      "data": Array [
        Object {
          " inline ": " field ",
        },
      ],
      "type": "text",
      "value": "nested ( inline :: field )",
    },
    Object {
      "data": Array [
        Object {
          "**Thoughts**": " It was decent.",
        },
      ],
      "type": "text",
      "value": "**Thoughts**:: It was decent.",
    },
    Object {
      "data": Array [
        Object {
          "**Rating**": " 6'",
        },
      ],
      "type": "text",
      "value": "**Rating**:: 6'",
    },
    Object {
      "data": Array [
        Object {
          "subject ": Object {
            " inline ": " field",
          },
        },
      ],
      "type": "text",
      "value": "subject :: inline :: field",
    },
    Object {
      "data": Array [
        Object {
          " subject ": Object {
            " inline ": " field ",
          },
        },
      ],
      "type": "text",
      "value": "nested ( subject :: inline :: field )",
    },
    Object {
      "data": Array [
        Object {
          "subject ": Object {
            " **Thoughts**": " It was decent.",
          },
        },
      ],
      "type": "text",
      "value": "subject :: **Thoughts**:: It was decent.",
    },
    Object {
      "data": Array [
        Object {
          "subject ": Object {
            " **Rating**": " 6",
          },
        },
      ],
      "type": "text",
      "value": "subject :: **Rating**:: 6",
    },
    Object {
      "type": "text",
      "value": "No inline fields",
    },
    Object {
      "data": Array [
        Object {
          "Too ": Object {
            " many ": Object {
              " inline ": " fields",
            },
          },
        },
      ],
      "type": "text",
      "value": "Too :: many :: inline :: fields",
    },
    Object {
      "data": Array [
        Object {
          "[[Bob]] ": Object {
            " foaf:knows ": " [[Alice]]",
          },
        },
      ],
      "links": Array [
        Object {
          "alias": undefined,
          "type": "internal",
          "value": "Bob",
        },
        Object {
          "alias": undefined,
          "type": "internal",
          "value": "Alice",
        },
      ],
      "type": "text",
      "value": "[[Bob]] :: foaf:knows :: [[Alice]]",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;

exports[`inLineAsArray inLineAsArray:true 1`] = `
Object {
  "children": Array [
    Object {
      "data": Array [
        Array [
          "inline ",
          " field",
        ],
      ],
      "type": "text",
      "value": "inline :: field",
    },
    Object {
      "data": Array [
        Array [
          " inline ",
          " field ",
        ],
      ],
      "type": "text",
      "value": "nested ( inline :: field )",
    },
    Object {
      "data": Array [
        Array [
          "**Thoughts**",
          " It was decent.",
        ],
      ],
      "type": "text",
      "value": "**Thoughts**:: It was decent.",
    },
    Object {
      "data": Array [
        Array [
          "**Rating**",
          " 6'",
        ],
      ],
      "type": "text",
      "value": "**Rating**:: 6'",
    },
    Object {
      "data": Array [
        Array [
          "subject ",
          " inline ",
          " field",
        ],
      ],
      "type": "text",
      "value": "subject :: inline :: field",
    },
    Object {
      "data": Array [
        Array [
          " subject ",
          " inline ",
          " field ",
        ],
      ],
      "type": "text",
      "value": "nested ( subject :: inline :: field )",
    },
    Object {
      "data": Array [
        Array [
          "subject ",
          " **Thoughts**",
          " It was decent.",
        ],
      ],
      "type": "text",
      "value": "subject :: **Thoughts**:: It was decent.",
    },
    Object {
      "data": Array [
        Array [
          "subject ",
          " **Rating**",
          " 6",
        ],
      ],
      "type": "text",
      "value": "subject :: **Rating**:: 6",
    },
    Object {
      "type": "text",
      "value": "No inline fields",
    },
    Object {
      "data": Array [
        Array [
          "Too ",
          " many ",
          " inline ",
          " fields",
        ],
      ],
      "type": "text",
      "value": "Too :: many :: inline :: fields",
    },
    Object {
      "data": Array [
        Array [
          "[[Bob]] ",
          " foaf:knows ",
          " [[Alice]]",
        ],
      ],
      "links": Array [
        Object {
          "alias": undefined,
          "type": "internal",
          "value": "Bob",
        },
        Object {
          "alias": undefined,
          "type": "internal",
          "value": "Alice",
        },
      ],
      "type": "text",
      "value": "[[Bob]] :: foaf:knows :: [[Alice]]",
    },
  ],
  "depth": 0,
  "type": "root",
}
`;
